verif/test/deca/codegen/invalid/logiques/if-sans-bool-verif.res
src/test/deca/codegen/invalid/logiques/if-sans-bool.deca:10:7: Condition types is not valid, expected BOOLEAN
